# hydra-msg

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  run-check-all-linux.desktop  run-check-all-linux.sh
crates/hydra-crypto/: Cargo.toml
crates/hydra-crypto/src/: aead.rs  backend.rs  error.rs  hash.rs  kdf.rs  lib.rs  mac.rs  ml_dsa.rs  ml_kem.rs  secret.rs  x25519.rs
crates/hydra-group/: Cargo.toml
crates/hydra-group/src/: canonical.rs  commit.rs  distribution.rs  epoch.rs  error.rs  lib.rs  membership.rs  message.rs  private_path.rs  public_tree.rs  rekey.rs  state.rs  types.rs  validation.rs
crates/hydra-group/src/canonical/: changes.rs  commit_core.rs  governance.rs  hashes.rs  mod.rs  primitives.rs  roster.rs  signatures.rs  test_support.rs
crates/hydra-group/src/commit/: apply.rs  install.rs  key_schedule.rs  membership.rs  mod.rs  payload.rs  prepare.rs  tests.rs  transition.rs  tree_update.rs  types.rs  validation.rs
crates/hydra-group/src/commit/tests/: mutation_regressions.rs
crates/hydra-group/src/distribution/: encoding.rs  mod.rs  targets.rs  tests.rs  validation.rs  wrapping.rs
crates/hydra-group/src/message/: crypto.rs  mod.rs  open.rs  seal.rs  signature.rs  sizing.rs  tests.rs  types.rs
crates/hydra-group/src/message/tests/: signature_edges.rs  signature_guards.rs
crates/hydra-group/src/private_path/: derive.rs  encoding.rs  mod.rs  tests.rs  types.rs
crates/hydra-group/src/public_tree/: geometry.rs  hashing.rs  mod.rs  mutation.rs  tests.rs  types.rs
crates/hydra-group/src/state/: config.rs  membership_private.rs  mod.rs  replay.rs  roster_view.rs  sender_chain.rs  snapshot.rs
crates/hydra-group/src/state/sender_chain/: snapshot_restore.rs
crates/hydra-group/src/tests/: mod.rs  mode_rules.rs  resource_limits.rs  roster_state.rs
crates/hydra-msg/: Cargo.toml  README.md
crates/hydra-msg-wasm/: Cargo.toml  LICENSE  README.md
crates/hydra-msg-wasm/src/: lib.rs  types.rs
crates/hydra-msg/src/: anonymous_auth.rs  anonymous_auth_tests.rs  benchmark.rs  codec.rs  contacts.rs  fuzzing.rs  handshake.rs  handshake_tests.rs  identity.rs  lib.rs  limits.rs  lobbies.rs  lobby_routing.rs  lobby_routing_tests.rs  messages.rs  storage.rs  storage_tests.rs  tests.rs  time.rs
crates/hydra-msg/src/api/: anonymous_auth.rs  benchmark.rs  contacts.rs  identity.rs  lobbies.rs  receive.rs  storage.rs
crates/hydra-msg/src/browser/: persistence.rs  persistence_js.rs
crates/hydra-msg/src/codec/: auth.rs  contacts.rs  handshake.rs  handshake_fields.rs  identity.rs  kdf.rs  lobbies.rs  messages.rs  mod.rs  storage.rs  util.rs
crates/hydra-msg/src/envelope/: limits.rs
crates/hydra-msg/src/handshake/: mod.rs  routing.rs  security.rs  types.rs
crates/hydra-msg/src/lobby/: delivery.rs
crates/hydra-msg/src/messages/: mod.rs  types.rs
crates/hydra-msg/src/packet_fragments/: mod.rs  outbound.rs  reassembly.rs  records.rs  tests.rs
crates/hydra-msg/src/persistence/: backup.rs  encrypted_snapshot.rs  mod.rs  native_store.rs  rollback.rs  snapshot.rs  status.rs
crates/hydra-msg/src/tests/: adversarial_protocol.rs  anonymous_auth.rs  api_freeze.rs  crash_consistency.rs  domain_separation.rs  envelope_limits.rs  lifecycle_edges.rs  limit_boundaries.rs  lobby_routing.rs  native_concurrency.rs  persistence.rs  public_api_misuse.rs  resource_limits.rs  session_security.rs  storage.rs  storage_chunks.rs
crates/hydra-session/: Cargo.toml
crates/hydra-session/src/: error.rs  key_derivation.rs  lib.rs  ratchet.rs  refresh.rs  session.rs  skipped_keys.rs
crates/hydra-session/src/session/: envelope_bounds.rs  lifecycle.rs  mod.rs  receive.rs  refresh_state.rs  send.rs  snapshot.rs  test_support.rs
crates/hydra-session/src/tests/: mod.rs  receive_validation.rs  refresh.rs  send_receive.rs
examples/hydra-app/: Cargo.toml
examples/hydra-app-core/: Cargo.toml
examples/hydra-app-core/examples/: abuse_failure_tests.rs  attachment_handling.rs  create_identity.rs  device_linking.rs  group_create_join.rs  identity_store.rs  live_state_store.rs  message_store.rs  recovery_export_import.rs  signed_backup_history.rs  start_session_send_receive.rs  transport_relay.rs
examples/hydra-app-core/src/: abuse.rs  attachment.rs  backup_history.rs  chat_bootstrap.rs  chat_shell.rs  contact_trust.rs  device_link.rs  error.rs  group.rs  identity.rs  identity_store.rs  identity_vault.rs  lib.rs  live_state.rs  message_store.rs  random.rs  recovery.rs  secret_handling.rs  session.rs  storage_recovery.rs  transport.rs
examples/hydra-app/src/: config.rs  contacts.rs  main.rs  secrets.rs
examples/hydra-app/src/cli/: bootstrap.rs  chats.rs  config.rs  contacts.rs  identity.rs  mod.rs  recovery.rs
examples/hydra-app/src/gui/: assets.rs  encoding.rs  forms.rs  html.rs  http.rs  mod.rs  router.rs  security.rs  server.rs  state.rs  tests.rs
examples/hydra-app/src/services/: bootstrap.rs  chat.rs  config.rs  contacts.rs  context.rs  help.rs  identity.rs  mod.rs  recovery.rs
examples/lobby_roundtrip/: Cargo.toml  README.md
examples/lobby_roundtrip/src/: main.rs
examples/mobile_perf_web/: Cargo.toml  README.md
examples/mobile_perf_web/scripts/: build-wasm.ps1  build-wasm.sh
examples/mobile_perf_web/src/: main.rs
examples/mobile_perf_web/web/: app.js
qa/fuzz/cargo-fuzz/: Cargo.toml
qa/fuzz/cargo-fuzz/fuzz_targets/: anonymous_auth_token_parser.rs  common.rs  contact_card_parser.rs  envelope_header_decoding.rs  fragment_reassembly.rs  group_commit_message_parser.rs  handshake_offer_answer_parser.rs  lobby_invite_parser.rs  message_codec.rs  message_stateful_flow.rs  protected_record_decoding.rs  session_receive_state_machine.rs  storage_backup_chunk_parser.rs
qa/tests/cross-version-compat/: Cargo.toml  README.md
qa/tests/cross-version-compat/src/: lib.rs
qa/tests/interop/: Cargo.toml  README.md
qa/tests/interop/src/: candidate_vectors.rs  lib.rs
qa/tools/vector-gen/: Cargo.toml  README.md
qa/tools/vector-gen/src/: fragment_vectors.rs  group_vectors.rs  main.rs  protocol_vectors.rs  vector_matrix.rs
(+1175 files in other folders)
