[workspace]
resolver = "2"
members = [
    "crates/hydra-core",
    "crates/hydra-crypto",
    "crates/hydra-envelope",
    "crates/hydra-session",
    "crates/hydra-group",
    "crates/hydra-msg",
    "crates/hydra-msg-wasm",
    "crates/hydra-msg-cli",
    "examples/handshake_roundtrip",
    "examples/contact_card",
    "examples/attachment_roundtrip",
    "examples/lobby_roundtrip",
    "examples/mobile_perf_web",
    "examples/manual_file_carrier",
    "examples/webrtc_manual_carrier",
    "examples/hydra-gui/hydra-app-core",
    "examples/hydra-gui/hydra-app",
    "qa/fuzz/hydra-fuzz-gate",
    "qa/tests/cross-version-compat",
    "qa/tests/interop",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
rust-version = "1.88"
license = "GPL-2.0-or-later"
repository = "https://github.com/peavey2787/hydra-msg"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
missing_panics_doc = "allow"
missing_errors_doc = "allow"
