[package]
name = "hydra-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chacha20poly1305 = { version = "=0.10.1", default-features = false, features = ["alloc"] }
getrandom = { version = "=0.4.3", features = ["sys_rng"] }
hkdf = "=0.13.0"
hmac = { version = "=0.13.0", features = ["zeroize"] }
hydra-core = { path = "../hydra-core" }
ml-dsa = { version = "=0.1.1", default-features = false, features = ["alloc", "rand_core", "zeroize"] }
ml-kem = { version = "=0.3.2", default-features = false, features = ["alloc", "zeroize"] }
rand_core = "=0.10.1"
sha3 = "=0.11.0"
x25519-dalek = { version = "=2.0.1", default-features = false, features = ["static_secrets", "zeroize"] }
zeroize = { version = "=1.9.0", features = ["derive"] }

[dev-dependencies]
hex = "=0.4.3"

[lints]
workspace = true
