[package]
name = "hydra-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
test-support = []

[dependencies]
hydra-core = { version = "0.1.0", path = "../hydra-core" }
hydra-crypto = { version = "0.1.0", path = "../hydra-crypto" }
hydra-envelope = { version = "0.1.0", path = "../hydra-envelope" }

[lints]
workspace = true
