[package]
name = "hydra-app-core"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license = "GPL-2.0-or-later"
repository.workspace = true

[features]
default = []
test-support = []

[dependencies]
getrandom = { version = "=0.4.3", features = ["sys_rng"] }
hydra-core = { version = "0.1.0", path = "../../crates/hydra-core" }
hydra-crypto = { version = "0.1.0", path = "../../crates/hydra-crypto" }
hydra-group = { version = "0.1.0", path = "../../crates/hydra-group" }
hydra-session = { version = "0.1.0", path = "../../crates/hydra-session" }
rand_core = "=0.10.1"
scrypt = { version = "=0.11.0", default-features = false }
zeroize = "=1.9.0"


[[example]]
name = "create_identity"

[[example]]
name = "start_session_send_receive"
required-features = ["test-support"]

[[example]]
name = "group_create_join"

[[example]]
name = "identity_store"

[[example]]
name = "message_store"

[[example]]
name = "transport_relay"

[[example]]
name = "recovery_export_import"

[[example]]
name = "device_linking"

[[example]]
name = "attachment_handling"

[[example]]
name = "abuse_failure_tests"

[[example]]
name = "live_state_store"
required-features = ["test-support"]

[[example]]
name = "signed_backup_history"
