[package]
name = "hydra-app"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license = "GPL-2.0-or-later"
repository.workspace = true

[dependencies]
getrandom = { version = "=0.4.3", features = ["sys_rng"] }
hydra-app-core = { version = "0.1.0", path = "../hydra-app-core" }
hydra-crypto = { version = "0.1.0", path = "../../crates/hydra-crypto" }
rand_core = "=0.10.1"

