[package]
name = "hydra-cross-version-compat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hydra-core = { version = "0.1.0", path = "../../../crates/hydra-core" }
hydra-msg = { version = "0.1.0", path = "../../../crates/hydra-msg" }

[lints]
workspace = true
