[package]
name = "hydra-interop-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hydra-core = { version = "0.1.0", path = "../../../crates/hydra-core" }
hydra-crypto = { version = "0.1.0", path = "../../../crates/hydra-crypto" }
hydra-envelope = { version = "0.1.0", path = "../../../crates/hydra-envelope" }
hydra-msg = { version = "0.1.0", path = "../../../crates/hydra-msg" }
hydra-session = { version = "0.1.0", path = "../../../crates/hydra-session", features = ["test-support"] }

[lints]
workspace = true
